# overwatch-index

./: .gitignore  200.html  CNAME  Makefile  README.md  ana.html  ashe.html  baptiste.html  bastion.html  brigitte.html  bronze.html  diamond.html  doomfist.html  dva.html  echo.html  genji.html  gold.html  grandmasters.html  hanzo.html  index.html  junkrat.html  lucio.html  masters.html  mccree.html  mei.html  mercy.html  moira.html  newbie.html  orisa.html  pharah.html  plat.html  pyproject.toml  qp.html  reaper.html  reinhardt.html  roadhog.html  sigma.html  silver.html  soldier.html  sombra.html  (+8 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml
_nuxt/: 000366f.js  0007a0c.js  000d0a4.js  000f3b5.js  00106d7.js  0011cca.js  0015b17.js  0016391.js  0016f20.js  0018e08.js  001d6ec.js  0023b00.js  0023fe1.js  003073c.js  00313f5.js  0032acf.js  0037629.js  003e5ab.js  004b18e.js  004ffb7.js  005142e.js  005b1e1.js  00697b1.js  006a0f5.js  00869f0.js  00977c2.js  00a781b.js  00ac100.js  00ad8d7.js  00bb527.js  00c1919.js  00c55a7.js  00c7ca4.js  00d3c1b.js  00d43a1.js  00d869b.js  00dab98.js  00dff82.js  00e1c2f.js  00e52b1.js  (+10924 more)
heroes/: index.html
overwatch-index/: README.md  nuxt.config.js  package-lock.json  package.json
overwatch-index/.github.sample/: dependabot.yml
overwatch-index/assets/: theme.css
overwatch-index/components/: oi-menu.vue  oi-navbar.vue  video-cards.vue
overwatch-index/lib/: videos.js
overwatch-index/pages/: _app.js  index.js  index.vue
overwatch-index/pages/heroes/: index.vue
overwatch-index/pages/videos/: heroes.js
overwatch-index/plugins/: bootstrap-ui.js
overwatch-index/static/: site.webmanifest
overwatch-index/util/: filter.js
src/: fetch.py  generate.py  youtube.py
static/css/: main.css
templates/: google_analytics.html.jinja2  index.html.jinja2  video_card.html.jinja2
test/: test_results.json
